Fixed AStern ... he is working right . I'm so happy
Signed-off-by: Meldanor <Bhaals@gmx.de>